# rust-nbody

generator/: .gitignore  Cargo.toml
generator/src/: lib.rs  main.rs
generator/src/components/: mod.rs  position.rs  velocity.rs
generator/src/resources/: log.rs  mod.rs
generator/src/systems/: gravity.rs  log.rs  mod.rs  velocity.rs
renderer/: package-lock.json  package.json
renderer/client/: index.html  index.js
renderer/server/: index.js
