[package]
name = "astropixels"
version = "0.1.0"
authors = ["Ilya Atamas <stackdumper@gmail.com>"]
edition = "2018"

[[bin]]
name = "astropixels"
doc = false

[dependencies]
cgmath = { version = "0.17.0", features = ["serde"] }
serde_json = "1.0.44"
serde = { version = "1.0.104", features = ["derive"] }
chrono = "0.4.10"
specs = "0.15.1"
rayon = "1.3.0"
shred = "0.9.4"
rand = "0.7.2"
